--- a/src/components/passConfiguration/PassConfiguration.css
+++ b/src/components/passConfiguration/PassConfiguration.css
@@ -1,9 +1,7 @@
 .container-configuration{
     height: auto;
     width: 30%;
-    background-color: #8A817C;
+    background-color: #036D19;
     padding: 25px;
     border-radius: 5px;
-
-    
 }
