responsive for mobile

--- a/src/components/optionsConfig/OptionsConfig.css
+++ b/src/components/optionsConfig/OptionsConfig.css
@@ -21,3 +21,9 @@
     color: white;
     font-family: 'Rajdhani', sans-serif !important;
 }
+
+@media screen and (max-width: 600px) {
+    .slider-container{
+        flex-direction: column;
+    }    
+}
