--- a/src/components/passConfiguration/PassConfiguration.css
+++ b/src/components/passConfiguration/PassConfiguration.css
@@ -4,4 +4,11 @@
     background-color: #036D19;
     padding: 25px;
     border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+@media screen and (max-width: 600px) {
+    .container-configuration {
+        width: 85%;
+    }
 }
